# phase1-track3-lab1-advanced-agent

./: README.md  main.py  pyproject.toml  run_benchmark.py
data/: hotpot_100.json
outputs/hotpot100_llm/: react_runs.jsonl  reflexion_runs.jsonl  report.json  report.md
outputs/llm_smoke/: react_runs.jsonl  reflexion_runs.jsonl  report.json  report.md
src/reflexion_lab/: agents.py  llm_runtime.py  prompts.py  reporting.py  schemas.py  utils.py
